<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroMateria">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/lblTitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="32dp"
                android:text="@string/TituloRegistrarM"
                android:textColor="@color/darkBlue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/CamposItem"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listItems">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="4dp"
                    android:text="Item a evaluar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listItems" />

                <EditText
                    android:id="@+id/txtItemEv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Ej: Parcial teorico" />

                <TextView
                    android:id="@+id/textViewCorte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="4dp"
                    android:text="Porcentaje %" />

                <EditText
                    android:id="@+id/txtItemPorc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="20" />

                <Button
                    android:id="@+id/btnAddItem"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="5dp"
                    android:text="Agregar Item"

                    />
            </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="80dp"
                android:text="@string/subTituloMat"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Nombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblMateria" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="16dp"
                android:text="@string/subTituloRub"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

            <TextView
                android:id="@+id/lblMateria"
                android:layout_width="148dp"
                android:layout_height="23dp"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="8dp"
                android:text="Nombre de la materia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listItems"
                android:layout_width="324dp"
                android:layout_height="72dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SpinnerCortes" />

            <Spinner
                android:id="@+id/SpinnerCortes"
                android:layout_width="182dp"
                android:layout_height="43dp"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/lblPorcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:text="Porcentaje del corte"
                app:layout_constraintStart_toEndOf="@+id/SpinnerCortes"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/btnRegistrarMat"
                android:layout_width="135dp"
                android:layout_height="56dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/aqua"
                android:text="@string/btnRegistrar"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CamposItem" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@+id/btnRegistrarMat"></TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>